# cursoML

./: README.md
extra/: README.txt  label_imgs.py
extra/cvPersonDetectionSingle/: CMakeLists.txt
extra/cvPersonDetectionSingle/include/: Hungarian.hpp  Track.hpp  head_detector.h  helper.hpp
extra/cvPersonDetectionSingle/src/: CMakeLists.txt  head_detector.cpp  helper.cpp
extra/liveAudio/: live.py
sesion2/: moneda.py  monedas.py  tira_moneda.py
sesion3/: 01_tipos_basicos.py  02_control.py  03_ciclos.py  04_ciclos.py  04_modulos.py  05_modulos.py  06_archivos.py  06_funciones.py  07_archivos.py  07_modulos_propios.py  08_listas_extra.py  08_modulos_propios.py  09_cadenas_extra.py  09_listas_extra.py  10_cadenas_extra.py  11_funciones_extra.py  12_linea_de_commandos.py  13_excepciones.py  mimodulo.py
sesion4/: camaraweb.py  cambiandotamaño.py  cortandoimagen.py  mostrandoimagen.py
sesion4_texto/: el_quijote.py
sesion5/: calculando_features.py  calculando_gradiente.py  calculando_hog.py
sesion5_text/: 33809-0.txt  create_segments.py  pg25705.txt  test.txt  train_test.py  training.txt
sesion6/: 48x48.txt  detectarcabezas.py  predict.py  train_features.py
sesion6_audio/: mel.py
sesion6_text/: config.py  twitter_collect.py  twitter_search.py
sesion7/: 48x48.txt  convert_format.py  detectarcabezas.py
